--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,4 @@
 
-
 DOCKER_REPO_TAG_NAME = gitw-river-bidders
 
 clean:
@@ -10,9 +9,11 @@ install: clean
 	sudo python -m pip install --upgrade pip
 	sudo python -m pip install --upgrade -r requirements.txt
 
-docker-image: clean
+docker-build-river-bidders:
 	docker build -t $(DOCKER_REPO_TAG_NAME) .
-	docker push $(DOCKER_REPO_TAG_NAME)
 
-docker-run-client:
-	docker run -d -p 9001:80 -v `pwd`/fixedclient.py:/usr/local/src/client/client.py gitw-client
+docker-run-gitw-client:
+	docker run -d -p 9001:80 -v `pwd`/dev_client.py:/usr/local/src/client/client.py gitw-client
+
+docker-run-gitw-river-bidders:
+	docker run -d -p 9001:80 -v `pwd`/dev_client.py:/usr/local/src/client/client.py $(DOCKER_REPO_TAG_NAME)
